--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^22.5.5",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "solid-devtools": "^0.29.2",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
+    "@solid-primitives/storage": "^4.2.1",
+    "megalodon": "^10.0.3",
     "solid-js": "^1.8.11"
   }
 }
