code is sent back to the app

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,5 +18,12 @@
         "uriFormat": "http://localhost:%s"
       }
     },
+    {
+      "name": "Launch Edge",
+      "request": "launch",
+      "type": "msedge",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}"
+    }
   ],
 }
