--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@solidjs/router": "^0.14.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "digraph-js": "^2.2.3",
     "megalodon": "^10.0.3",
     "solid-js": "^1.8.11",
     "tailwind-merge": "^2.5.2",
