--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@types/luxon": "^3.4.2",
         "@types/node": "^22.5.5",
         "@types/url-regex-safe": "^1.0.2",
         "autoprefixer": "^10.4.20",
@@ -30,6 +31,7 @@
         "clsx": "^2.1.1",
         "digraph-js": "^2.2.3",
         "get-urls": "^12.1.0",
+        "luxon": "^3.5.0",
         "megalodon": "^10.0.3",
         "rehype-parse": "^9.0.1",
         "rehype-sanitize": "^6.0.0",
