Use /public instead
We won't be referencing the PWA JSON anyway, so keep it as static as
possible.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
         }
     ],
     "start_url": "./",
-    "scope": "..",
+    "scope": ".",
     "display": "standalone",
     "theme_color": "#000000",
     "background_color": "#000000"
