--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "solid-js": "^1.8.11",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
+        "tinykeys": "^3.0.0",
         "unified": "^11.0.5",
         "url-regex-safe": "^4.0.0"
     }
