--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "start": "vite",
         "dev": "vite",
+        "dev-host": "vite --host",
         "build": "vite build",
         "serve": "vite preview"
     },
