show blurhashes for images attached to sensitive-flagged posts, allow removing attachments from unsent posts

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@kobalte/core": "^0.13.6",
         "@solid-primitives/storage": "^4.2.1",
         "@solidjs/router": "^0.14.5",
+        "blurhash": "^2.0.5",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "digraph-js": "^2.2.3",
