wip rule engine

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "get-urls": "^12.1.0",
         "hast-util-find-and-replace": "^5.0.1",
         "hastscript": "^9.0.0",
+        "json-rules-engine": "^7.0.0",
         "luxon": "^3.5.0",
         "megalodon": "^10.0.3",
         "rehype-parse": "^9.0.1",
