--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "exifreader": "^4.23.7",
         "filesize": "^10.1.6",
         "get-urls": "^12.1.0",
+        "hash-wasm": "^4.11.0",
         "hast-util-find-and-replace": "^5.0.1",
         "hastscript": "^9.0.0",
         "json-rules-engine": "^7.0.0",
