--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "autoprefixer": "^10.4.20",
         "license-report": "^6.7.0",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.47",
         "solid-devtools": "^0.29.2",
         "tailwindcss": "^3.4.12",
         "typescript": "^5.3.3",
@@ -47,15 +46,18 @@
         "hast-util-find-and-replace": "^5.0.1",
         "hastscript": "^9.0.0",
         "json-rules-engine": "^7.0.0",
+        "lodash-es": "^4.17.21",
         "luxon": "^3.5.0",
         "megalodon": "git://github.com/vivlim/megalodon.git#65f4c40a92ec4ec16d67ca1f1ec9de4e7a62f542",
         "rehype-parse": "^9.0.1",
         "rehype-sanitize": "^6.0.0",
         "rehype-stringify": "^10.0.1",
+        "solid-color": "^0.0.4",
         "solid-icons": "^1.1.0",
         "solid-js": "^1.8.11",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
+        "tinycolor2": "^1.6.0",
         "tinykeys": "^3.0.0",
         "unified": "^11.0.5",
         "url-regex-safe": "^4.0.0"
