--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "tailwindcss-animate": "^1.0.7",
         "tinycolor2": "^1.6.0",
         "tinykeys": "^3.0.0",
+        "tslog": "^4.9.3",
         "unified": "^11.0.5",
         "url-regex-safe": "^4.0.0"
     }
