--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,13 @@
     "resolveJsonModule": true,
     "noEmit": true,
     "isolatedModules": true,
+    "lib": [
+        "DOM",
+        "ESNext",
+        "DOM.Iterable",
+        "ScriptHost",
+        "WebWorker"
+    ],
     "paths": {
       "~/*": [
         "./src/*"
