--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
         "json-rules-engine": "^7.0.0",
         "lodash-es": "^4.17.21",
         "luxon": "^3.5.0",
-        "megalodon": "git://github.com/vivlim/megalodon.git#65f4c40a92ec4ec16d67ca1f1ec9de4e7a62f542",
+        "megalodon": "^10.0.7",
         "rehype-parse": "^9.0.1",
         "rehype-react": "^8.0.0",
         "rehype-sanitize": "^6.0.0",
