--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -4,10 +4,13 @@ on:
   push:
     branches:
       - main
+      - dev
+      - staging
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
       - main
+      - staging
 
 jobs:
   build_and_deploy_job:
@@ -32,6 +35,7 @@ jobs:
           api_location: "" # Api source code path - optional
           output_location: "dist" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
+          production_branch: "main"
         env:
             SKIP_DEPLOY_ON_MISSING_SECRETS: true
 
