patch solid-color so types are imported
to patch it i used `npx patch-package --exclude '^whatever$' solid-color`

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "pillbug-app",
     "pillbug-components",
     "json-rules-editor"
-]
+],
+"scripts": {
+    "patch:pillbug-app": "patch-package"
+}
 }
