--- a/package.json
+++ b/package.json
@@ -1,11 +1,1 @@
-{
-"name": "pillbug-workspace",
-"workspaces": [
-    "pillbug-app",
-    "pillbug-components",
-    "json-rules-editor"
-],
-"scripts": {
-    "patch:pillbug-app": "patch-package"
-}
-}
+{"name":"pillbug-workspace","workspaces":["pillbug-app","pillbug-components","json-rules-editor"],"scripts":{"patch:pillbug-app":"patch-package"},"dependencies":{"@reduxjs/toolkit":"^2.5.0"}}
