--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "lodash-es": "^4.17.21",
         "luxon": "^3.5.0",
         "megalodon": "^10.0.7",
+        "@reduxjs/toolkit": "^2.5.0",
         "rehype-parse": "^9.0.1",
         "rehype-react": "^8.0.0",
         "rehype-sanitize": "^6.0.0",
