maybe fix patches applying in ci?

--- a/pillbug-app/package.json
+++ b/pillbug-app/package.json
@@ -19,12 +19,13 @@
         "dev": "vite",
         "dev-host": "vite --host",
         "vite-build": "vite build",
-        "build": "npm-run-all license-report vite-build",
+        "build": "npm-run-all applypatches license-report vite-build",
         "serve": "vite preview",
         "license-report-deps": "license-report --only=prod --output=json > license-report.json",
         "license-report-devDeps": "license-report --only=dev --output=json > license-report-dev.json",
         "license-report": "npm-run-all license-report-deps license-report-devDeps",
         "test": "vitest",
+        "applypatches": "cd ../ && npm run patch:pillbug-app",
         "postinstall": "cd ../ && npm run patch:pillbug-app"
     },
     "license": "MIT",
