--- a/pillbug-app/package.json
+++ b/pillbug-app/package.json
@@ -75,6 +75,7 @@
         "lodash-es": "^4.17.21",
         "luxon": "^3.5.0",
         "megalodon": "^10.0.7",
+        "normalized-reducer": "^0.6.0",
         "patch-package": "^8.0.0",
         "rehype-parse": "^9.0.1",
         "rehype-react": "^8.0.0",
