Replace post body textarea with a codemirror instance

--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
         "@codemirror/commands": "^6.7.1",
         "@codemirror/lang-javascript": "^6.2.2",
         "@codemirror/lang-json": "^6.0.1",
+        "@codemirror/lang-markdown": "^6.5.0",
         "@codemirror/state": "^6.4.1",
         "@codemirror/view": "^6.34.2",
         "@fontsource/atkinson-hyperlegible": "^5.1.0",
         "@kobalte/core": "^0.13.6",
+        "@reduxjs/toolkit": "^2.5.0",
         "@solid-primitives/storage": "^4.2.1",
         "@solidjs/router": "^0.14.5",
         "blurhash": "^2.0.5",
@@ -57,7 +59,6 @@
         "lodash-es": "^4.17.21",
         "luxon": "^3.5.0",
         "megalodon": "^10.0.7",
-        "@reduxjs/toolkit": "^2.5.0",
         "rehype-parse": "^9.0.1",
         "rehype-react": "^8.0.0",
         "rehype-sanitize": "^6.0.0",
